--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,4 +80,5 @@ jobs:
         git config --global user.email "actions@github.com"
         git add chatbot_model.pkl
         git diff --quiet && git diff --staged --quiet || git commit -m "Update chatbot model [skip ci]"
-        git push
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+        git push origin HEAD
