--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,9 +70,10 @@ jobs:
         path: ./
         
     - name: Commit and push trained model
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add chatbot_model.pkl
-        git diff --quiet && git diff --staged --quiet || git commit -m "Update chatbot model [skip ci]"
-        git push origin HEAD
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add chatbot_model.pkl
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update chatbot model [skip ci]"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+          git push origin HEAD
