--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,10 +73,10 @@ jobs:
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4  # Updated to v4
+      uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GH_PAT }}  # Explicitly use your PAT
-        fetch-depth: 0  # Fetches all history for all branches
+        token: ${{ secrets.GH_PAT }}  # <-- Personal Access Token (PAT) with `packages:write` & `packages:delete`
+        fetch-depth: 0
   
     - name: Download model artifact
       uses: actions/download-artifact@v4
@@ -91,3 +91,20 @@ jobs:
         git add chatbot_model.pkl
         git commit -m "Update chatbot model [skip ci]" || echo "No changes to commit"
         git push origin HEAD
+
+    - name: Log in to GHCR
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GH_PAT }}   # <-- same PAT with package permissions
+
+    - name: Build Docker image
+      run: |
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/chatbot:latest
+        docker build -t $IMAGE_NAME .
+    
+    - name: Push Docker image
+      run: |
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/chatbot:latest
+        docker push $IMAGE_NAME
