--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,10 +101,10 @@ jobs:
 
     - name: Build Docker image
       run: |
-        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/chatbot:latest
+        IMAGE_NAME=ghcr.io/bishalbabudumre/chatbot:latest
         docker build -t $IMAGE_NAME .
     
     - name: Push Docker image
       run: |
-        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/chatbot:latest
+        IMAGE_NAME=ghcr.io/bishalbabudumre/chatbot:latest
         docker push $IMAGE_NAME
